--- a/beauty-zone/css/styles.css
+++ b/beauty-zone/css/styles.css
@@ -1,6 +1,62 @@
-.button{
-    color: #FFFFFF;
-    background-color: #2B7FFF;
-    border: 2px solid #2B7FFF;
+:root {
+    --color-primary-dark: #011C44;
+    --color-primary-light: #FFFFFF;
+    --color-brand: #2B7FFF;
+}
+
+/*Base*/
+body {
+   color: var(--color-primary-dark); 
+}
+
+ul {
+list-style-type: none;
+}
+
+/* Buttons */
+.button {
+    color: var(--color-primary-light);
+    background-color: var(--color-brand);
+    border: 2px solid var(--color-brand);
     border-radius: 32px;
+    cursor: pointer;
+}
+.button:hover {
+    color: var(--color-primary-dark);
+    background-color: transparent;
+}
+
+/* Header-footer Links*/
+.header-link {
+    color: var(--color-primary-dark)
+}
+
+.header-link:hover {
+    color: var(--color-brand);
+}
+
+.footer-link {
+    color: var(--color-primary-light);
+}
+
+.footer-link:hover {
+    color: var(--color-brand);
+}
+
+/*Hero section*/
+.hero-title {
+    color: var(--color-brand);
+}
+
+/*Accent*/
+.accent {
+    color: var(--color-brand);
+}
+
+.advantages {
+    color: var(--color-primary-dark);
+}
+
+.section-title {
+    color: var(--color-primary-dark);
 }
