--- a/beauty-zone/css/styles.css
+++ b/beauty-zone/css/styles.css
@@ -1,3 +1,42 @@
+@font-face {
+    font-display: swap;
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 400;
+    src: url('../fonts/roboto-v30-latin-regular.woff2') format('woff2');
+}
+
+@font-face {
+    font-display: swap;
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 500;
+    src: url('../fonts/roboto-v30-latin-500.woff2') format('woff2');
+}
+
+@font-face {
+    font-display: swap;
+    font-family: 'Play';
+    font-style: normal;
+    font-weight: 400;
+    src: url('../fonts/play-v19-latin-regular.woff2') format('woff2');
+}
+
+body {
+    font-family: 'Roboto', sans-serif;
+}
+
+h1 {
+    font-family: 'Play', sans-serif;
+}
+
+.button {
+    color: #FFFFFF;
+    background-color: #2B7FFF;
+    border: 2px solid #2B7FFF;
+    border-radius: 32px;
+}
+
 :root {
     --color-primary-dark: #011C44;
     --color-primary-light: #FFFFFF;
@@ -7,6 +46,9 @@
 /*Base*/
 body {
    color: var(--color-primary-dark); 
+   front-family: Play, sans-serif;
+   front-weight: 400px; 
+
 }
 
 ul {
@@ -16,10 +58,13 @@ list-style-type: none;
 /* Buttons */
 .button {
     color: var(--color-primary-light);
+    font-weight: 600;
     background-color: var(--color-brand);
     border: 2px solid var(--color-brand);
     border-radius: 32px;
     cursor: pointer;
+    text-align: left;
+
 }
 .button:hover {
     color: var(--color-primary-dark);
@@ -28,24 +73,36 @@ list-style-type: none;
 
 /* Header-footer Links*/
 .header-link {
-    color: var(--color-primary-dark)
+    color: var(--color-primary-dark);
+    front-weight: 400px
 }
 
 .header-link:hover {
     color: var(--color-brand);
+    front-weight: 700px
+
 }
 
 .footer-link {
     color: var(--color-primary-light);
+    text-decoration: none;
+    front-weight: 400px
 }
 
 .footer-link:hover {
     color: var(--color-brand);
+    text-decoration: none;
+    front-weight: 700px
 }
 
 /*Hero section*/
 .hero-title {
     color: var(--color-brand);
+    font-family: Play, sans-serif;
+    text-align: center;
+    text-transform: capitalize;
+    font-size: 140px;
+    font-weight: 700;
 }
 
 /*Accent*/
@@ -55,8 +112,14 @@ list-style-type: none;
 
 .advantages {
     color: var(--color-primary-dark);
+    text-align: center;
+    font-family: Play;
+    front-weight: 400px;
 }
 
 .section-title {
     color: var(--color-primary-dark);
+    font-family: Play; 
+    front-weight: 700px;
+
 }
