--- a/Homework-1/beauty-zone/css/styles.css
+++ b/Homework-1/beauty-zone/css/styles.css
@@ -38,12 +38,14 @@ h1 {
     --color-primary-dark: #011C44;
     --color-primary-light: #FFFFFF;
     --color-brand: #2B7FFF;
+    --color-informative: #4A4A4A;
+    --color-informative-footer: #747272;
 }
 
 /*Base*/
 body {
    color: var(--color-primary-dark); 
-   font-family: Play, sans-serif;
+   font-family: 'Roboto', sans-serif;
    font-weight: 400px; 
 
 }
@@ -56,11 +58,13 @@ list-style-type: none;
 .button {
     color: var(--color-primary-light);
     font-weight: 600;
+    font-size: 18px;
     background-color: var(--color-brand);
     border: 2px solid var(--color-brand);
     border-radius: 32px;
     cursor: pointer;
     text-align: left;
+    gap: 10px;
 
 }
 .button:hover {
@@ -71,11 +75,14 @@ list-style-type: none;
 /* Header-footer Links*/
 .header-link {
     color: var(--color-primary-dark);
-    font-weight: 400px
+    text-decoration: none;
+    font-weight: 400px;
+    font-size: 18px;
 }
 
 .header-link:hover {
     color: var(--color-brand);
+    text-decoration: none;
     font-weight: 700px
 
 }
@@ -83,13 +90,20 @@ list-style-type: none;
 .footer-link {
     color: var(--color-primary-light);
     text-decoration: none;
-    font-weight: 400px
+    font-weight: 400px;
+    font-size: 16px;
+    
 }
 
 .footer-link:hover {
     color: var(--color-brand);
     text-decoration: none;
-    font-weight: 700px
+    font-weight: 700px;
+}
+
+/*Call to action section*/
+.call-to-action {
+color: var(--color-informative);
 }
 
 /*Hero section*/
@@ -110,13 +124,21 @@ list-style-type: none;
 .advantages {
     color: var(--color-primary-dark);
     text-align: center;
-    font-family: Play;
+    font-family: 'Roboto', sans-serif;
     font-weight: 400px;
 }
 
 .section-title {
     color: var(--color-primary-dark);
-    font-family: Play; 
+    font-family: 'Play', sans-serif; 
     font-weight: 700px;
-
 }
+
+/*Data safety section*/
+.Data-safety {
+    color: var(--color-informative-footer);
+    font-size: 13px;
+    font-weight: 203;
+    font-style: normal;
+}
+
