--- a/Bakery/css/styles.css
+++ b/Bakery/css/styles.css
@@ -34,12 +34,21 @@
 }
 
 /*Base */
+* {
+   box-sizing: border-box;
+}
+
 body {
-    columns: var(--color-primary-dark);
+    color: var(--color-primary-dark);
     font-family: 'Poppins', sans-serif;
     font-size: 18px;
-    font-weight: 400px;
+    font-weight: 400;
     line-height: 1.5;
+    margin: 0 auto;
+}
+
+h1, h2, h3, h4, h5, h6, p {
+margin-top: 0;
 }
 
 address {
@@ -50,8 +59,29 @@ ul {
     list-style-type: none;
 }
 
+.visually-hidden {
+    position: absolute;
+    left: -10000px;
+    top: auto;
+    width: 1px;
+    height: 1px;
+    overflow: hidden;
+}
+
+.section {
+   padding: 48px 0;
+}
+
+.container {
+    width: calc(100% - 48px);
+    /* Учитываем внутренние отступы (24px с каждой стороны) */
+    max-width: 1288px;
+    margin: 0 auto;
+}
+
 /*Button*/
 .button {
+padding: 16px 32px;
 color: var(--color-primary-light);
 font-weight: 600;
 background-color: var(--color-brand-light);
@@ -77,7 +107,12 @@ cursor: pointer;
 }
 
 /* Hero section */
+.hero-section {
+padding: 272px 0;
+}
+
 .hero-title {
+    margin-bottom: 0;
     color: var(--color-primary-light);
     text-align: center;
     font-size: 128px;
@@ -111,23 +146,43 @@ cursor: pointer;
 .section-title .accent{
     color: var(--color-brand-dark);
 }
+
 /* Traditions section */ 
+
+.traditions-section {
+ padding-top: 96px;   
+}
+
+.section-title {
+   margin-bottom: 42px; 
+}
+
 .traditions-text .brand {
     color: var(--color-brand-light);
-    font-weight: 600px;
+    font-weight: 600;
 }
 .traditions-text .uppercase {
-    text-transform: uppercase;;
+    text-transform: uppercase;
 }
 
 /* Chef section */
+.chefs-title {
+    margin-bottom: 80px;
+}
+
 .chef-title {
+    margin-bottom: 16px; 
     font-size: 40px;
     font-weight: 600;
+    
 }
 
 /* Formats section */
-.format-title{
+.formats-title {
+margin-bottom: 80px;
+}
+
+.format-title {
     font-size: 24px;
     font-weight: 600;
 }
@@ -136,10 +191,17 @@ cursor: pointer;
     font-size: 14px;
     font-weight: 300;
 }
+
+/*Conatcts section*/
+.contacts-title {
+    margin-bottom: 16px;
+}
+
+
 /*Footer*/
 .address-link {
     color: var(--color-primary-light);
-    font-style: 16px;
+    font-size: 16px;
     font-weight: 300;
     text-decoration: none;
 }
