--- a/Bakery/css/styles.css
+++ b/Bakery/css/styles.css
@@ -56,6 +56,8 @@ address {
 }
 
 ul {
+    margin: 0;
+    padding: 0;
     list-style-type: none;
 }
 
@@ -103,7 +105,30 @@ cursor: pointer;
 
 .link:hover {
     color: var(--color-brand-light);
-    font-weight: 600;
+}
+
+/*Header*/
+.header {
+    background-color: lightgrey;
+}
+.header-container {
+    display: flex;
+    align-items: center;
+    gap: 40px;
+}
+
+.header-nav {
+    display: flex;
+    align-items: center;
+    flex-grow: 1;
+    gap: 40px;
+}
+
+.header-menu {
+    display: flex;
+    gap: 64px;
+    flex-grow: 1;
+    justify-content: center;
 }
 
 /* Hero section */
@@ -127,12 +152,19 @@ padding: 272px 0;
 }
 
 /*Advantages section */
-.advantages-list {
-    color: var(--color-primary-light);
+.advantages-section {
+    padding: 16 0;
     background-color: var(--color-brand-light);
 }
 
+.advantages-list {
+    display: flex;
+    justify-content: space-between;
+    gap: 40px;
+}
+
 .advantages-item {
+    color: var(--color-primary-light);
     font-size: 20px;
     font-weight: 300;
 }
@@ -151,6 +183,16 @@ padding: 272px 0;
 
 .traditions-section {
  padding-top: 96px;   
+}
+
+.traditions-container {
+    display: flex;
+    justify-content: space-between;
+    gap: 40px;
+}
+
+.traditions-content {
+    max-width: 710px;
 }
 
 .section-title {
@@ -174,10 +216,20 @@ padding: 272px 0;
     margin-bottom: 16px; 
     font-size: 40px;
     font-weight: 600;
-    
 }
 
 /* Formats section */
+.formats-list {
+    display: flex;
+    gap: 20px;
+}
+
+.format-card {
+    padding: 24px;
+    border: 1px solid lightgray; /*remove*/
+    border-radius: 16px;
+}
+
 .formats-title {
 margin-bottom: 80px;
 }
