--- a/Bakery/css/styles.css
+++ b/Bakery/css/styles.css
@@ -31,6 +31,8 @@
     --color-primary-light: #faf4ea;
     --color-brand-light: #819b57;
     --color-brand-dark: #465929;
+    --color-brand-grey: #CFCFBC;
+    --color-secondary-dark: #A18268;
 }
 
 /*Base */
@@ -40,6 +42,7 @@
 
 body {
     color: var(--color-primary-dark);
+    background-color: var(--color-primary-light);
     font-family: 'Poppins', sans-serif;
     font-size: 18px;
     font-weight: 400;
@@ -109,7 +112,7 @@ cursor: pointer;
 
 /*Header*/
 .header {
-    background-color: lightgrey;
+    background-color: lightgrey; /*romove*/
 }
 .header-container {
     display: flex;
@@ -134,6 +137,10 @@ cursor: pointer;
 /* Hero section */
 .hero-section {
 padding: 272px 0;
+background-image: url(../images/background-couple-drinking-coffee.jpg);
+background-repeat: no-repeat;
+background-position: center top;
+background-size: cover;
 }
 
 .hero-title {
@@ -175,6 +182,10 @@ padding: 272px 0;
     line-height: 1.3;
 }
 
+.section-title.centered {
+    text-align: center;
+}
+
 .section-title .accent{
     color: var(--color-brand-dark);
 }
@@ -209,7 +220,21 @@ padding: 272px 0;
 
 /* Chef section */
 .chefs-title {
-    margin-bottom: 80px;
+    max-width: 520px;
+    margin: 0 auto 80px;
+}
+
+.chefs-title::after,
+.chefs-title::before {
+    display: block;
+    width: 352px;
+    border: 2px solid var(--color-brand-grey);
+    content: '';
+}
+
+.chef-photo {
+    border-radius: 4px 4px 4px 200px;
+    box-shadow: -16px 16px 0 0 var(--color-primary-light), -16px 16px 0 2px var(--color-secondary-dark);
 }
 
 .chef-title {
@@ -225,9 +250,13 @@ padding: 272px 0;
 }
 
 .format-card {
+    height: 444px;
     padding: 24px;
+    background-image: linear-gradient(180deg, rgba(49, 38, 26, 0) 55.21%, rgba(49, 38, 26, 0.71) 72.92%, var(--color-primary-dark) 100%);
     border: 1px solid lightgray; /*remove*/
     border-radius: 16px;
+
+
 }
 
 .formats-title {
@@ -264,4 +293,12 @@ margin-bottom: 80px;
 
 .address-copyright {
     font-size: 14px;
+}
+
+.footer {
+    background-color: var(--color-primary-dark);
+    background-image: url(../images/footer-main.png);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
 }
