--- a/Bakery/css/styles.css
+++ b/Bakery/css/styles.css
@@ -36,8 +36,10 @@
 }
 
 /*Base */
-* {
-   box-sizing: border-box;
+*,
+*::before,
+*::after {
+    box-sizing: border-box;
 }
 
 body {
@@ -52,6 +54,10 @@ body {
 
 h1, h2, h3, h4, h5, h6, p {
 margin-top: 0;
+}
+
+a {
+    display: inline-block;
 }
 
 address {
@@ -160,7 +166,7 @@ background-size: cover;
 
 /*Advantages section */
 .advantages-section {
-    padding: 16 0;
+    padding: 16px 0;
     background-color: var(--color-brand-light);
 }
 
@@ -219,6 +225,7 @@ background-size: cover;
 }
 
 /* Chef section */
+
 .chefs-title {
     max-width: 520px;
     margin: 0 auto 80px;
@@ -232,6 +239,20 @@ background-size: cover;
     content: '';
 }
 
+.chefs-list {
+   display: flex; 
+   gap: 40px 30px;
+}
+
+.chefs-item {
+    flex-basis: calc(100% - 30px / 2);
+}
+
+.chef-card {
+    display: flex;
+    gap: 30px;
+}
+
 .chef-photo {
     border-radius: 4px 4px 4px 200px;
     box-shadow: -16px 16px 0 0 var(--color-primary-light), -16px 16px 0 2px var(--color-secondary-dark);
@@ -243,7 +264,21 @@ background-size: cover;
     font-weight: 600;
 }
 
+.chef-text p {
+    margin-bottom: 24px;
+}
+
+.chef-text p:last-child {
+    margin-bottom: 0;
+}
+
 /* Formats section */
+.formats-container {
+    display: flex;
+    align-items: center ;
+    gap: 32px;
+}
+
 .formats-list {
     display: flex;
     gap: 20px;
@@ -255,8 +290,6 @@ background-size: cover;
     background-image: linear-gradient(180deg, rgba(49, 38, 26, 0) 55.21%, rgba(49, 38, 26, 0.71) 72.92%, var(--color-primary-dark) 100%);
     border: 1px solid lightgray; /*remove*/
     border-radius: 16px;
-
-
 }
 
 .formats-title {
@@ -273,13 +306,72 @@ margin-bottom: 80px;
     font-weight: 300;
 }
 
-/*Conatcts section*/
+/*Carousel*/
+.carousel-button {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-shrink: 0;
+    width: 44px;
+    height: 44px;
+    padding: 0;
+    fill: var(--color-primary-dark);
+    background-color: transparent;
+    border-radius: 50%;
+    border: 1px solid var(--color-primary-dark);
+    cursor: pointer;
+}
+
+.carousel-button:hover {
+    fill: var(--color-primary-light);
+    background-color: var(--color-primary-dark);
+}
+
+/*Contacts section*/
+.contact-section {
+padding-bottom: 96px;
+}
+.contact-container {
+    display: flex;
+    gap: 32px;
+}
 .contacts-title {
     margin-bottom: 16px;
 }
 
+.contact-map {
+    flex-shrink: 0;
+    border-radius: 16px;
+    border: none;
+}
 
 /*Footer*/
+.footer {
+    padding: 32px 0;
+}
+
+.footer-container {
+    display: flex;
+    gap: 20px;
+}
+
+.footer-nav,
+.footer-address {
+    display: flex;
+    flex-basis: 50%;
+    gap: 20px;
+}
+
+.footer-logo, 
+.footer-menu {
+    flex-grow: 1;
+}
+
+.address-list,
+.address-info {
+flex-grow: 1;
+}
+
 .address-link {
     color: var(--color-primary-light);
     font-size: 16px;
@@ -289,6 +381,14 @@ margin-bottom: 80px;
 
 .address-link:hover {
     color: var(--color-brand-light); 
+}
+
+.address-icon {
+    fill: var(--color-primary-light);
+}
+
+.address-icon:hover {
+    fill: var(--color-brand-light);
 }
 
 .address-copyright {
