--- a/Bakery/css/styles.css
+++ b/Bakery/css/styles.css
@@ -143,7 +143,7 @@ cursor: pointer;
 /* Hero section */
 .hero-section {
 padding: 272px 0;
-background-image: url(../images/background-couple-drinking-coffee.jpg);
+background-image: url(../images/hero-section-background.jpg);
 background-repeat: no-repeat;
 background-position: center top;
 background-size: cover;
@@ -227,16 +227,27 @@ background-size: cover;
 /* Chef section */
 
 .chefs-title {
+    position: relative;
     max-width: 520px;
     margin: 0 auto 80px;
 }
 
-.chefs-title::after,
-.chefs-title::before {
+.chefs-title::before,
+.chefs-title::after {
+    position: absolute;
+    bottom: 24px;
     display: block;
     width: 352px;
     border: 2px solid var(--color-brand-grey);
     content: '';
+}
+
+.chefs-title::before {
+    left: 0px;
+}
+
+.chefs-title::after {
+    right: -0px;
 }
 
 .chefs-list {
@@ -348,6 +359,33 @@ padding-bottom: 96px;
 /*Footer*/
 .footer {
     padding: 32px 0;
+    position: relative;
+    background-color: var(--color-primary-dark);
+    background-image: url(../images/footer-main.png);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+}
+
+.footer::before {
+    position: absolute;
+    width: 180px;
+    height: 120px;
+    left: 0;
+    bottom: 0;
+    background-repeat: no-repeat;
+    background-image: url(../images/one-bread.png);
+    content: '';
+}
+
+.footer::after {
+    position: absolute;
+    width: 380px;
+    height: 190px;
+    right: 0;
+    bottom: 0;
+    background-image: url(../images/two-breads.png);
+    content: '';
 }
 
 .footer-container {
@@ -394,11 +432,35 @@ flex-grow: 1;
 .address-copyright {
     font-size: 14px;
 }
+/* Modal */
+.backdrop {
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: rgba(0, 0, 0, 0.5);
+}
 
-.footer {
-    background-color: var(--color-primary-dark);
-    background-image: url(../images/footer-main.png);
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: center;
+.backdrop.is-hidden {
+    opacity: 0;
+    visibility: hidden;
+    pointer-events: none;
+}
+
+.modal {
+    position: relative;
+    width: 880px;
+    height: 880px;
+    background-color: var(--color-primary-light);
+    border-radius: 32px;
+}
+
+.modal-btn-close {
+    position: absolute;
+    top: 40px;
+    right: 40px;
 }
